crates/strider/tests/snapshots/ppc32le__complex__consume.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "7" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v8" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v8" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "3" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "9" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "10" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v11" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v11" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "3" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "10" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "12" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v13" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v13" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "14" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "15" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v16" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v16" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
